lesson3/k8s-log-system/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log-system
  labels:
    name: log-system
    istio-injection: enabled
